# linux-stt-input

./: .gitignore  README.md  config.example.yaml  install.sh  main.py  pyproject.toml  run.sh
docs/: README.zh.md
src/: config.py  hotkey_listener.py  stt_engine.py
